The feature of zoom in & out is done

--- a/One-image Viewer/Base.lproj/Main.storyboard
+++ b/One-image Viewer/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="A4h-sJ-stm">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -18,33 +18,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cZ3-4K-fmo">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cZ3-4K-fmo">
                                 <rect key="frame" x="174" y="556" width="46" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="vdl-y9-223"/>
-                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <connections>
                                     <action selector="selectPictureButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Xpy-Cz-zeb"/>
                                 </connections>
                             </button>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S8i-uI-zT3">
-                                <rect key="frame" x="0.0" y="59" width="375" height="435"/>
+                                <rect key="frame" x="42" y="109" width="290" height="333"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="435" id="zBM-vB-aik"/>
+                                    <constraint firstAttribute="height" constant="333" id="RMC-aO-vug"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="5sh-Ut-Y6U"/>
+                                </connections>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="cZ3-4K-fmo" firstAttribute="top" secondItem="S8i-uI-zT3" secondAttribute="bottom" constant="62" id="KLB-ov-onV"/>
-                            <constraint firstItem="cZ3-4K-fmo" firstAttribute="top" secondItem="S8i-uI-zT3" secondAttribute="bottom" constant="62" id="QiW-nB-JrG"/>
-                            <constraint firstItem="S8i-uI-zT3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="39" id="Uxc-Re-ZEk"/>
-                            <constraint firstItem="S8i-uI-zT3" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="VsS-4a-gBN"/>
-                            <constraint firstItem="S8i-uI-zT3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fHg-fj-9wF"/>
-                            <constraint firstItem="cZ3-4K-fmo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="174" id="pHg-ou-M9M"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cZ3-4K-fmo" secondAttribute="trailing" constant="155" id="tyb-vd-sWh"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="cZ3-4K-fmo" secondAttribute="bottom" constant="81" id="ynw-rw-oy8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="S8i-uI-zT3" secondAttribute="trailing" constant="43" id="32S-pf-dX3"/>
+                            <constraint firstItem="S8i-uI-zT3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="89" id="ACb-bC-qDy"/>
+                            <constraint firstItem="S8i-uI-zT3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="42" id="WfD-z5-hh5"/>
+                            <constraint firstItem="cZ3-4K-fmo" firstAttribute="top" secondItem="S8i-uI-zT3" secondAttribute="bottom" constant="114" id="qfD-7C-cm7"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -56,5 +52,65 @@
             </objects>
             <point key="canvasLocation" x="117.59999999999999" y="117.39130434782609"/>
         </scene>
+        <!--Test View Controller-->
+        <scene sceneID="Szd-wJ-lEJ">
+            <objects>
+                <viewController id="A4h-sJ-stm" customClass="TestViewController" customModule="One_image_Viewer" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="aIH-xJ-dRR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9OF-Mj-GkN">
+                                <rect key="frame" x="16" y="81" width="343" height="336"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1200px-Taipei_101_2009_amk" translatesAutoresizingMaskIntoConstraints="NO" id="sPx-Z5-Tgu">
+                                        <rect key="frame" x="0.0" y="8" width="343" height="320"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="320" id="4pd-5B-jED"/>
+                                            <constraint firstAttribute="width" constant="343" id="Pv7-IA-Ufc"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="sPx-Z5-Tgu" secondAttribute="bottom" constant="8" id="EoJ-kr-40G"/>
+                                    <constraint firstItem="sPx-Z5-Tgu" firstAttribute="leading" secondItem="9OF-Mj-GkN" secondAttribute="leading" id="i04-nT-JSe"/>
+                                    <constraint firstAttribute="trailing" secondItem="sPx-Z5-Tgu" secondAttribute="trailing" id="p8p-cz-9kE"/>
+                                    <constraint firstItem="sPx-Z5-Tgu" firstAttribute="top" secondItem="9OF-Mj-GkN" secondAttribute="top" constant="8" id="tJw-eF-Uoo"/>
+                                    <constraint firstAttribute="height" constant="336" id="zOU-7z-emB"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="A4h-sJ-stm" id="3Rf-UK-C7Z"/>
+                                </connections>
+                            </scrollView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZYZ-I7-Wtl">
+                                <rect key="frame" x="164" y="515" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="changePhotoButton:" destination="A4h-sJ-stm" eventType="touchUpInside" id="VNM-b9-WSx"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="9OF-Mj-GkN" firstAttribute="leading" secondItem="xpX-jL-xch" secondAttribute="leading" constant="16" id="Q5d-cg-iHI"/>
+                            <constraint firstItem="xpX-jL-xch" firstAttribute="trailing" secondItem="9OF-Mj-GkN" secondAttribute="trailing" constant="16" id="R1q-Xd-dn5"/>
+                            <constraint firstItem="xpX-jL-xch" firstAttribute="bottom" secondItem="9OF-Mj-GkN" secondAttribute="bottom" constant="250" id="Zl9-aO-eZo"/>
+                            <constraint firstItem="9OF-Mj-GkN" firstAttribute="top" secondItem="xpX-jL-xch" secondAttribute="top" constant="61" id="kgt-l6-OaR"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="xpX-jL-xch"/>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="sPx-Z5-Tgu" id="uGV-bs-fzV"/>
+                        <outlet property="scrollView" destination="9OF-Mj-GkN" id="IKP-eW-NP7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bGm-oy-KiQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="998" y="645"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="1200px-Taipei_101_2009_amk" width="1200" height="1912"/>
+    </resources>
 </document>
