--- a/One-image Viewer/Base.lproj/Main.storyboard
+++ b/One-image Viewer/Base.lproj/Main.storyboard
@@ -60,57 +60,106 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9OF-Mj-GkN">
-                                <rect key="frame" x="16" y="81" width="343" height="336"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zqo-rh-yJF">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="590"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1200px-Taipei_101_2009_amk" translatesAutoresizingMaskIntoConstraints="NO" id="sPx-Z5-Tgu">
-                                        <rect key="frame" x="0.0" y="8" width="343" height="320"/>
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9OF-Mj-GkN">
+                                        <rect key="frame" x="0.0" y="60" width="375" height="470"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_photo" translatesAutoresizingMaskIntoConstraints="NO" id="sPx-Z5-Tgu">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="470"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="470" id="7C4-6Q-zGI"/>
+                                                    <constraint firstAttribute="width" constant="375" id="9ML-HH-zuO"/>
+                                                    <constraint firstAttribute="height" constant="470" id="BjA-uM-Kah"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="320" id="4pd-5B-jED"/>
-                                            <constraint firstAttribute="width" constant="343" id="Pv7-IA-Ufc"/>
+                                            <constraint firstAttribute="trailing" secondItem="sPx-Z5-Tgu" secondAttribute="trailing" id="1HR-1j-sjQ"/>
+                                            <constraint firstAttribute="bottom" secondItem="sPx-Z5-Tgu" secondAttribute="bottom" id="2Ep-q3-d23"/>
+                                            <constraint firstItem="sPx-Z5-Tgu" firstAttribute="top" secondItem="9OF-Mj-GkN" secondAttribute="top" id="9e9-Az-CVX"/>
+                                            <constraint firstItem="sPx-Z5-Tgu" firstAttribute="leading" secondItem="9OF-Mj-GkN" secondAttribute="leading" id="KGb-I5-JIe"/>
+                                            <constraint firstAttribute="bottom" secondItem="sPx-Z5-Tgu" secondAttribute="bottom" id="PrH-p3-fzP"/>
+                                            <constraint firstItem="sPx-Z5-Tgu" firstAttribute="leading" secondItem="9OF-Mj-GkN" secondAttribute="leading" id="Q9q-Yr-7gg"/>
+                                            <constraint firstItem="sPx-Z5-Tgu" firstAttribute="top" secondItem="9OF-Mj-GkN" secondAttribute="top" id="VG7-Zr-Mac"/>
+                                            <constraint firstItem="sPx-Z5-Tgu" firstAttribute="top" secondItem="9OF-Mj-GkN" secondAttribute="top" id="hr3-Ba-28X"/>
+                                            <constraint firstAttribute="trailing" secondItem="sPx-Z5-Tgu" secondAttribute="trailing" id="sea-dQ-zuk"/>
+                                            <constraint firstItem="sPx-Z5-Tgu" firstAttribute="leading" secondItem="9OF-Mj-GkN" secondAttribute="leading" id="uG3-YD-NeC"/>
+                                            <constraint firstAttribute="height" constant="470" id="y8c-S4-DJ8"/>
                                         </constraints>
-                                    </imageView>
+                                        <connections>
+                                            <outlet property="delegate" destination="A4h-sJ-stm" id="3Rf-UK-C7Z"/>
+                                        </connections>
+                                    </scrollView>
                                 </subviews>
+                                <color key="backgroundColor" red="0.16862745098039217" green="0.16862745098039217" blue="0.16862745098039217" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="sPx-Z5-Tgu" secondAttribute="bottom" constant="8" id="EoJ-kr-40G"/>
-                                    <constraint firstItem="sPx-Z5-Tgu" firstAttribute="leading" secondItem="9OF-Mj-GkN" secondAttribute="leading" id="i04-nT-JSe"/>
-                                    <constraint firstAttribute="trailing" secondItem="sPx-Z5-Tgu" secondAttribute="trailing" id="p8p-cz-9kE"/>
-                                    <constraint firstItem="sPx-Z5-Tgu" firstAttribute="top" secondItem="9OF-Mj-GkN" secondAttribute="top" constant="8" id="tJw-eF-Uoo"/>
-                                    <constraint firstAttribute="height" constant="336" id="zOU-7z-emB"/>
+                                    <constraint firstItem="9OF-Mj-GkN" firstAttribute="top" secondItem="Zqo-rh-yJF" secondAttribute="top" constant="60" id="aBD-SQ-Hke"/>
+                                    <constraint firstAttribute="bottom" secondItem="9OF-Mj-GkN" secondAttribute="bottom" constant="60" id="eKk-Sr-fFK"/>
+                                    <constraint firstAttribute="trailing" secondItem="9OF-Mj-GkN" secondAttribute="trailing" id="hgQ-0Q-ptf"/>
+                                    <constraint firstItem="9OF-Mj-GkN" firstAttribute="leading" secondItem="Zqo-rh-yJF" secondAttribute="leading" id="qp0-ZS-zJb"/>
                                 </constraints>
-                                <connections>
-                                    <outlet property="delegate" destination="A4h-sJ-stm" id="3Rf-UK-C7Z"/>
-                                </connections>
-                            </scrollView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZYZ-I7-Wtl">
-                                <rect key="frame" x="164" y="515" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="changePhotoButton:" destination="A4h-sJ-stm" eventType="touchUpInside" id="VNM-b9-WSx"/>
-                                </connections>
-                            </button>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pMR-2c-xNo">
+                                <rect key="frame" x="0.0" y="589" width="375" height="78"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZYZ-I7-Wtl">
+                                        <rect key="frame" x="98" y="17" width="180" height="44"/>
+                                        <color key="backgroundColor" red="0.16862745098039217" green="0.16862745098039217" blue="0.16862745098039217" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="7jh-yx-FzG"/>
+                                            <constraint firstAttribute="width" constant="180" id="Ch0-0K-9n4"/>
+                                        </constraints>
+                                        <state key="normal">
+                                            <attributedString key="attributedTitle">
+                                                <fragment content="Pick an Image">
+                                                    <attributes>
+                                                        <font key="NSFont" size="20" name="SFMono-Bold"/>
+                                                        <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
+                                        </state>
+                                        <connections>
+                                            <action selector="changePhotoButton:" destination="A4h-sJ-stm" eventType="touchUpInside" id="VNM-b9-WSx"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.97647058823529409" green="0.87450980392156863" blue="0.090196078431372548" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="ZYZ-I7-Wtl" secondAttribute="bottom" constant="17" id="1Yl-dT-3rq"/>
+                                    <constraint firstItem="ZYZ-I7-Wtl" firstAttribute="top" secondItem="pMR-2c-xNo" secondAttribute="top" constant="17" id="TwD-Uw-hwf"/>
+                                    <constraint firstItem="ZYZ-I7-Wtl" firstAttribute="leading" secondItem="pMR-2c-xNo" secondAttribute="leading" constant="98" id="grU-Rw-4Wf"/>
+                                    <constraint firstAttribute="trailing" secondItem="ZYZ-I7-Wtl" secondAttribute="trailing" constant="97" id="qnr-LJ-prp"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="9OF-Mj-GkN" firstAttribute="leading" secondItem="xpX-jL-xch" secondAttribute="leading" constant="16" id="Q5d-cg-iHI"/>
-                            <constraint firstItem="xpX-jL-xch" firstAttribute="trailing" secondItem="9OF-Mj-GkN" secondAttribute="trailing" constant="16" id="R1q-Xd-dn5"/>
-                            <constraint firstItem="xpX-jL-xch" firstAttribute="bottom" secondItem="9OF-Mj-GkN" secondAttribute="bottom" constant="250" id="Zl9-aO-eZo"/>
-                            <constraint firstItem="9OF-Mj-GkN" firstAttribute="top" secondItem="xpX-jL-xch" secondAttribute="top" constant="61" id="kgt-l6-OaR"/>
+                            <constraint firstItem="Zqo-rh-yJF" firstAttribute="top" secondItem="aIH-xJ-dRR" secondAttribute="top" id="3vC-PR-wBe"/>
+                            <constraint firstItem="pMR-2c-xNo" firstAttribute="top" secondItem="xpX-jL-xch" secondAttribute="top" constant="569" id="81h-XP-SkI"/>
+                            <constraint firstItem="pMR-2c-xNo" firstAttribute="trailing" secondItem="xpX-jL-xch" secondAttribute="trailing" id="BSw-hX-syd"/>
+                            <constraint firstItem="Zqo-rh-yJF" firstAttribute="trailing" secondItem="xpX-jL-xch" secondAttribute="trailing" id="D9t-mi-u1K"/>
+                            <constraint firstItem="pMR-2c-xNo" firstAttribute="leading" secondItem="xpX-jL-xch" secondAttribute="leading" id="Guk-dm-q0U"/>
+                            <constraint firstItem="pMR-2c-xNo" firstAttribute="bottom" secondItem="xpX-jL-xch" secondAttribute="bottom" id="dPr-Zj-bTX"/>
+                            <constraint firstItem="Zqo-rh-yJF" firstAttribute="leading" secondItem="xpX-jL-xch" secondAttribute="leading" id="diY-Lh-q9M"/>
+                            <constraint firstItem="xpX-jL-xch" firstAttribute="bottom" secondItem="Zqo-rh-yJF" secondAttribute="bottom" constant="77" id="pmZ-pg-RMA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="xpX-jL-xch"/>
                     </view>
                     <connections>
+                        <outlet property="changePhotoButton" destination="ZYZ-I7-Wtl" id="il7-kU-2nD"/>
                         <outlet property="imageView" destination="sPx-Z5-Tgu" id="uGV-bs-fzV"/>
                         <outlet property="scrollView" destination="9OF-Mj-GkN" id="IKP-eW-NP7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bGm-oy-KiQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="998" y="645"/>
+            <point key="canvasLocation" x="117.59999999999999" y="817.24137931034488"/>
         </scene>
     </scenes>
     <resources>
-        <image name="1200px-Taipei_101_2009_amk" width="1200" height="1912"/>
+        <image name="icon_photo" width="44" height="44"/>
     </resources>
 </document>
