--- a/One-image Viewer/Base.lproj/Main.storyboard
+++ b/One-image Viewer/Base.lproj/Main.storyboard
@@ -11,51 +11,9 @@
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="One_image_Viewer" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cZ3-4K-fmo">
-                                <rect key="frame" x="174" y="556" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="selectPictureButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Xpy-Cz-zeb"/>
-                                </connections>
-                            </button>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S8i-uI-zT3">
-                                <rect key="frame" x="42" y="109" width="290" height="333"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="333" id="RMC-aO-vug"/>
-                                </constraints>
-                                <connections>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="5sh-Ut-Y6U"/>
-                                </connections>
-                            </scrollView>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="S8i-uI-zT3" secondAttribute="trailing" constant="43" id="32S-pf-dX3"/>
-                            <constraint firstItem="S8i-uI-zT3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="89" id="ACb-bC-qDy"/>
-                            <constraint firstItem="S8i-uI-zT3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="42" id="WfD-z5-hh5"/>
-                            <constraint firstItem="cZ3-4K-fmo" firstAttribute="top" secondItem="S8i-uI-zT3" secondAttribute="bottom" constant="114" id="qfD-7C-cm7"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                    <connections>
-                        <outlet property="scrollView" destination="S8i-uI-zT3" id="b8C-nC-E23"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="117.59999999999999" y="117.39130434782609"/>
-        </scene>
-        <!--Test View Controller-->
         <scene sceneID="Szd-wJ-lEJ">
             <objects>
-                <viewController id="A4h-sJ-stm" customClass="TestViewController" customModule="One_image_Viewer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="A4h-sJ-stm" customClass="ViewController" customModule="One_image_Viewer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aIH-xJ-dRR">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -67,16 +25,16 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="590"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_photo" translatesAutoresizingMaskIntoConstraints="NO" id="sPx-Z5-Tgu">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="590"/>
+                                                <rect key="frame" x="0.0" y="20" width="375" height="550"/>
                                             </imageView>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstItem="sPx-Z5-Tgu" firstAttribute="centerX" secondItem="9OF-Mj-GkN" secondAttribute="centerX" id="0dJ-Gq-R5H"/>
-                                            <constraint firstAttribute="trailing" secondItem="sPx-Z5-Tgu" secondAttribute="trailing" id="51a-SL-Gpy"/>
-                                            <constraint firstItem="sPx-Z5-Tgu" firstAttribute="centerY" secondItem="9OF-Mj-GkN" secondAttribute="centerY" id="CRV-62-ev8"/>
-                                            <constraint firstItem="sPx-Z5-Tgu" firstAttribute="top" secondItem="9OF-Mj-GkN" secondAttribute="top" id="F5a-Zb-MUl"/>
-                                            <constraint firstAttribute="bottom" secondItem="sPx-Z5-Tgu" secondAttribute="bottom" id="SjA-dM-abX"/>
-                                            <constraint firstItem="sPx-Z5-Tgu" firstAttribute="leading" secondItem="9OF-Mj-GkN" secondAttribute="leading" id="ln1-sF-8d3"/>
+                                            <constraint firstItem="sPx-Z5-Tgu" firstAttribute="leading" secondItem="9OF-Mj-GkN" secondAttribute="leading" id="1x1-SS-V6G"/>
+                                            <constraint firstItem="sPx-Z5-Tgu" firstAttribute="top" secondItem="9OF-Mj-GkN" secondAttribute="top" constant="20" id="DQA-Sk-PHD"/>
+                                            <constraint firstAttribute="trailing" secondItem="sPx-Z5-Tgu" secondAttribute="trailing" id="KV7-lK-zkz"/>
+                                            <constraint firstItem="sPx-Z5-Tgu" firstAttribute="centerX" secondItem="9OF-Mj-GkN" secondAttribute="centerX" id="msY-nL-Aq4"/>
+                                            <constraint firstAttribute="bottom" secondItem="sPx-Z5-Tgu" secondAttribute="bottom" id="ner-WV-2t2"/>
+                                            <constraint firstItem="sPx-Z5-Tgu" firstAttribute="centerY" secondItem="9OF-Mj-GkN" secondAttribute="centerY" id="vX4-Te-bVX"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="delegate" destination="A4h-sJ-stm" id="3Rf-UK-C7Z"/>
@@ -136,7 +94,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bGm-oy-KiQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="117.59999999999999" y="817.24137931034488"/>
+            <point key="canvasLocation" x="-332" y="-244"/>
         </scene>
     </scenes>
     <resources>
