Adjust the coding style and delete the unnecessary code

--- a/One-image Viewer/Base.lproj/Main.storyboard
+++ b/One-image Viewer/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9OF-Mj-GkN">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="590"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_photo" translatesAutoresizingMaskIntoConstraints="NO" id="sPx-Z5-Tgu">
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_photo" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sPx-Z5-Tgu">
                                                 <rect key="frame" x="0.0" y="20" width="375" height="550"/>
                                             </imageView>
                                         </subviews>
